<resources>
    <string name="app_name">CleverDroid</string>

    <!-- Main Screen -->
    <string name="main_start">Start Quiz</string>
    <string name="main_repeat">Repeat</string>
    <string name="main_favorites">Favorites</string>
    <string name="main_score">Score</string>
    <string name="main_no_wrong_questions">You don\'t have wrong answered questions.</string>
    <string name="main_no_favorites">You don\'t have favorite marked questions.</string>
    <string name="main_snackbar_dismiss">DISMISS</string>

    <!-- Quiz Screen -->
    <string name="quiz_screen">Quiz</string>
    <string name="quiz_title">Question</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_back">Back</string>
    <string name="quiz_info_message">Please answer the question.</string>
    <string name="quiz_no_questions">There are no questions in this section.</string>

    <!-- Result Screen -->
    <string name="result_screen">Result</string>
    <string name="result_title">Your Score:</string>
    <string name="result_try_again">Try again</string>

    <!-- About Screen -->
    <string name="about_screen">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_developer_content">Deniz Kalem</string>
    <string name="about_licences_title">Licences</string>
    <string name="about_licences_butterknife">Butterknife</string>
    <string name="about_licences_sqlite">SQLiteAssetHelper</string>

    <!-- Settings Screen -->
    <string name="settings_screen">Settings</string>
    <string name="pref_clear_progress">Clear Progress</string>
    <string name="pref_clear_favorites">Clear Favorites</string>
    <string name="pref_progress_message">Your progress was deleted!</string>
    <string name="pref_favorites_message">Your favorites were deleted!</string>

    <!-- General -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="content_description_back">By clicking on this image you will get to the previous question.</string>
    <string name="content_description_next">By clicking on this image you will get to the next question.</string>

    <!-- Keys -->
    <string name="key_usecase" translatable="false">usecase</string>
    <string name="key_score" translatable="false">score</string>
    <string name="key_questions_amount" translatable="false">questions_amount</string>
    <string name="key_progress" translatable="false">progress</string>
    <string name="key_favorites" translatable="false">favorites</string>
    <string name="key_uri" translatable="false">uri</string>
    <string name="key_question_bank" translatable="false">question_bank</string>
    <string name="key_question_number" translatable="false">question_number</string>
    <string name="key_user_selection" translatable="false">user_selection</string>

    <!-- Widget -->
    <string name="widget_start">Start</string>
    <string name="widget_repeat">Repeat</string>
    <string name="widget_favorites">Favorites</string>
    <string name="add_widget">Add widget</string>
</resources>
