<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="de.udacity.dk.cleverdroid.ui.QuizFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/quiz_title" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hshdshashahs" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Android" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Android" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Android" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Android" />
        </RadioGroup>

    </android.support.v7.widget.CardView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/quiz_back" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/quiz_next" />

</RelativeLayout>
